# humn-faucet

./: .dockerignore  .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend/: Cargo.toml  package.json
apps/backend/migrations/: 20251117181621_create_claims_table.sql
apps/backend/src/: main.rs
apps/frontend/: package.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/: claim-submission.tsx  faucet-container.tsx  oprf-request.tsx  processing-steps.tsx  providers.tsx  wallet-connect.tsx  x-verification.tsx  zk-proof-generation.tsx
apps/frontend/lib/: utils.ts  wagmiConfig.ts
docker/: backend.Dockerfile  frontend.Dockerfile
